yaml/loadgen.yaml
apiVersion: v1
kind: Pod
metadata:
  name: loadgen
  labels:
    app: loadgen
spec:
  containers:
  - image: bschmitt769/kubernetes-demo-apps-loadgen:1.0
    imagePullPolicy: Always
    name: loadgen
    command:
      - ./loadgen.sh
      - "8888"
  restartPolicy: Always
