yaml/frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  labels:
    app: guestbook
    tier: frontend
spec:
  type: LoadBalancer
  ports:
  - port: 8888
    targetPort: 3000
  selector:
    app: guestbook
    tier: frontend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  replicas: 5
  selector:
    matchLabels:
      app: guestbook
      tier: frontend
  template:
    metadata:
      labels:
        app: guestbook
        tier: frontend
    spec:
      containers:
      - name: frontend
        image: bschmitt769/kubernetes-demo-apps-frontend:1.0
        imagePullPolicy: Always
        resources:
          requests:
            cpu: 100m
            memory: 200Mi
          limits:
            cpu: 200m
            memory: 400Mi
        livenessProbe:
         httpGet:
           path: /healthz
           port: 3000
         initialDelaySeconds: 30
         periodSeconds: 30
         timeoutSeconds: 5
         failureThreshold: 3
        ports:
          - containerPort: 3000
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: tier
                operator: In
                values:
                - "frontend"
            topologyKey: kubernetes.io/hostname
