yaml/parser.yaml
apiVersion: v1
kind: Service
metadata:
  name: parser
  labels:
    app: guestbook
    tier: parser
spec:
  ports:
  - port: 80
    targetPort: 3000
  selector:
    app: guestbook
    tier: parser
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: parser
  labels:
    app: guestbook
    tier: parser
spec:
  replicas: 1
  selector:
    matchLabels:
      app: guestbook
      tier: parser
  template:
    metadata:
      labels:
        app: guestbook
        tier: parser
    spec:
      containers:
      - name: parser
        image: bschmitt769/kubernetes-demo-apps-parser:1.0
        imagePullPolicy: Always
        livenessProbe:
          httpGet:
            path: /healthz
            port: 3000
          initialDelaySeconds: 30
          periodSeconds: 5
        resources:
          requests:
            cpu: 50m
            memory: 100Mi
          limits:
            cpu: 100m
            memory: 200Mi
        ports:
          - containerPort: 3000
