yaml/rabbitmq.yaml
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq
  labels:
    #app: rabbitmq
    tier: queue
spec:
  ports:
  - port: 5672
    targetPort: 5672
    name: rabbitmq
  - port: 15672
    targetPort: 15672
    name: rabbitmqmgmt
  - port: 15692
    targetPort: 15692
    name: rabbitmqprom
  selector:
    app: guestbook
    tier: queue
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq
  labels:
    app: guestbook
    tier: queue
spec:
  replicas: 1
  selector:
    matchLabels:
      app: guestbook
      tier: queue
  template:
    metadata:
      labels:
        component: rabbitmq
        app: guestbook
        tier: queue
    spec:
      containers:
      - name: queue
        image: rabbitmq:3-management
        #image: docker.io/spolfliet/newrelic-k8s-guestbook-rabbitmq:latest
        ports:
        - containerPort: 5672
          name: rabbitmq
        - containerPort: 15672
          name: rabbitmqmgmt
        - containerPort: 15692
          name: rabbitmqprom
        # resources:
        #  requests:
        #      cpu: 50m
        #      memory: 100Mi
        #  limits:
        #      cpu: 200m
        #      memory: 300Mi
