yaml/worker.yaml
apiVersion: v1
kind: Service
metadata:
  name: worker
  labels:
    app: guestbook
    tier: worker
spec:
  ports:
  - port: 80
    targetPort: 3000
  selector:
    app: guestbook
    tier: worker
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker
  labels:
    app: guestbook
    tier: worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: guestbook
      tier: worker
  template:
    metadata:
      labels:
        app: guestbook
        tier: worker
    spec:
      containers:
      - name: worker
        image: bschmitt769/kubernetes-demo-apps-worker:1.2
        imagePullPolicy: Always
        resources:
          requests:
            cpu: 50m
            memory: 100Mi
          limits:
            cpu: 150m
            memory: 200Mi
        ports:
          - containerPort: 3000
